[package]
name = "uwpm"
description = "UW's PowerMacros"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[profile.release]
strip = true

[dependencies]
active-win-pos-rs = "0.8.3"
windows = { version = "0.56.0", features = ["Win32_Foundation", "Win32_System_Pipes", "Win32_Storage_FileSystem", "Win32_Security", "Win32_System_IO" ] }
winmix = "0.1.2"

[build-dependencies]
winresource = "0.1.17"

[package.metadata.winresource]
LegalCopyright = "Copyright © 2024 UW"
OriginalFilename = "uwpm.exe"